--- a/IrrigationSystem_config.json
+++ b/IrrigationSystem_config.json
@@ -1,62 +1,86 @@
 {
-    "tank" : {
+    "tanks": [{
+        "Enabled": true,
         "TankHeight": 1970,
         "MinimumLevel": 200,
-        "TankSensorTrigPin": 20,
-        "TankSensorEchoPin": 21
-    },
+        "SensorTrig": 20,
+        "SensorEcho": 21
+    }],
 
     "system" : {
-        "MaxRunningZones": 1
+        "MaxRunningZones": 1,
+        "MaxZoneRunTime": 7200,
+        "PowerState": "On",
+        "MasterValvePin": 0,
+        "FlowSensorPin": 17,
+        "FlowSensorRate": 0.964,
+        "WaterLeakAlert": false
+    },
+
+    "eveapp" : {
+        "Enabled" : true,
+        "Firmware" : 1208,
+        "Latitude" : "",
+        "Longitude" : "",
+        "FlowRate" : 0
     },
     
     "zones": [{
-        "name": "Zone 1",
-        "relayPin": 14,
-        "DefaultRunTime": 1200,
-        "MaxRunTime": 7200,
-        "Enabled": true
+        "Name": "Zone 1",
+        "RelayPin": 14,
+        "RunTime": 1200,
+        "Enabled": true,
+        "MasterValve": false
     }, {
-        "name": "Zone 2",
-        "relayPin": 15,
-        "DefaultRunTime": 1200,
-        "MaxRunTime": 7200,
-        "Enabled": true
+        "Name": "Zone 2",
+        "RelayPin": 15,
+        "RunTime": 1200,
+        "Enabled": true,
+        "MasterValve": false
     }, {
-        "name": "Zone 3",
-        "relayPin": 18,
-        "DefaultRunTime": 1200,
-        "MaxRunTime": 7200,
-        "Enabled": true
+        "Name": "Zone 3",
+        "RelayPin": 18,
+        "RunTime": 1200,
+        "Enabled": true,
+        "MasterValve": false
     }, {
-        "name": "Zone 4",
-        "relayPin": 23,
-        "DefaultRunTime": 1200,
-        "MaxRunTime": 7200,
-        "Enabled": true
+        "Name": "Zone 4",
+        "RelayPin": 23,
+        "RunTime": 1200,
+        "Enabled": true,
+        "MasterValve": false
     }, {
-        "name": "Zone 5",
-        "relayPin": 24,
-        "DefaultRunTime": 1200,
-        "MaxRunTime": 7200,
-        "Enabled": true
+        "Name": "Zone 5",
+        "RelayPin": 24,
+        "RunTime": 1200,
+        "Enabled": true,
+        "MasterValve": false
     }, {
-        "name": "Zone 6",
-        "relayPin": 25,
-        "DefaultRunTime": 1200,
-        "MaxRunTime": 7200,
-        "Enabled": true
+        "Name": "Zone 6",
+        "RelayPin": 25,
+        "RunTime": 1200,
+        "Enabled": true,
+        "MasterValve": false
     }, {
-        "name": "Zone 7",
-        "relayPin": 8,
-        "DefaultRunTime": 1200,
-        "MaxRunTime": 7200,
-        "Enabled": true
+        "Name": "Zone 7",
+        "RelayPin": 8,
+        "RunTime": 1200,
+        "Enabled": true,
+        "MasterValve": false
     }, {
-        "name": "Zone 8",
-        "relayPin": 7,
-        "DefaultRunTime": 1200,
+        "Name": "Zone 8",
+        "RelayPin": 7,
+        "RunTime": 1200,
         "MaxRunTime": 7200,
-        "Enabled": true
+        "Enabled": true,
+        "MasterValve": false
+    }],
+
+    "groups" : [{ 
+        "Name": "All Zones",
+        "Zones" : ["Zone 1", "Zone 2", "Zone 3", "Zone 4", "Zone 5", "Zone 6", "Zone 7", "Zone 8"],
+        "RunTime": 1200,
+        "SeperateRunTime" : true,
+        "Enabled": true 
     }]
 }
