--- a/Nest/Nest_config.json
+++ b/Nest/Nest_config.json
@@ -2,6 +2,5 @@
     "SessionToken" : "<nest session token here or blank>",
     "RefreshToken" : "<google refresh token here or blank>",
     "Debug" : false,
-    "HKSV" : true,
-    "HKSVPreBuffer" : 15000
+    "HKSV" : true
 }
