--- a/Nest/package.json
+++ b/Nest/package.json
@@ -1,6 +1,6 @@
 {
     "name": "nest_accfactory",
-    "description": "HomeKit integration for Nest devices based om HAP-NodeJS library",
+    "description": "HomeKit integration for Nest devices based on HAP-NodeJS library",
     "version": "0.0.1",
     "main": "Nest_accfactory.js",
     "repository": {
@@ -18,14 +18,14 @@
         "temperature",
         "smoke",
         "sensor"
-      ],
+    ],
     "author": "Mark Hulskamp",
     "funding": [
         {
           "type": "paypal",
           "url": "https://www.paypal.com/donate/?cmd=_donations&business=YF53YVW333VVY&item_name=HAP-NodeJS-Accessories&currency_code=AUD&source=url"
         }
-      ],
+    ],
     "license": "ISC",
     "bugs": {
       "url": "https://github.com/n0rt0nthec4t/HAP-NodeJS-Accessories/issues"
@@ -36,18 +36,17 @@
         "nexusstreamer.js",
         "HomeKitHistory.js",
         "Nest_camera_off.jpg",
-        "Nest_camera_offline.jpg",
-        "Nest_config.json.sample"
-      ],
+        "Nest_camera_offline.jpg"
+    ],
     "engines": {
         "node": ">=11.15.0",
-        "hap-nodejs": "^0.10.2"
+        "hap-nodejs": ">=0.10.2"
     },
     "dependencies": {
-        "hap-nodejs": "^0.10.2",
+        "hap-nodejs": "^0.10.3-beta",
         "axios": "^0.24.0",
         "pbf": "^3.2.1",
         "ws": "^7.5.6",
-        "ffmpeg-for-homebridge": "^0.0.9" 
+        "ffmpeg-for-homebridge" : "^0.0.9"
     }
 }
